gcc/testsuite/g++.dg/parse/qualified2.C
namespace Glib {
  template <typename> class Value {};
  template <>         class Glib::Value<int> {}; // { dg-error "" }
}
